basic functionality for the gallery carousel

--- a/contact.html
+++ b/contact.html
@@ -19,22 +19,20 @@
 			<header>
 				<a id="logo" href="index.html">For Every Occasion</a>
 				<ul id="main-nav">
-					<li id="nav-1" class="current"><a href="index.html">Home</a></li>
+					<li id="nav-1"><a href="index.html">Home</a></li>
 					<li id="nav-2"><a href="services.html">Services</a></li>
 					<li id="nav-3"><a href="gallery.html">Gallery</a></li>
-					<li id="nav-4"><a href="contact.html">Contact</a></li>
+					<li id="nav-4" class="current"><a href="contact.html">Contact</a></li>
 					<span class="clear"></span>
 				</ul>
 			</header>
 		</div> <!-- /#header-container -->
 		
 		<div id="content">
-			<ul class="image-carousel">
-				<li class="active"><img src="img/home-carousel-img-1.jpg" src="" /></li>
-				<li><img src="img/home-carousel-img-2.jpg" src="" /></li>
-				<li><img src="img/home-carousel-img-3.jpg" src="" /></li>
-			</ul>
-			<p class="intro-p">We handle all the details of your event, whether big or small - Contact us today to learn more about our services and schedule your special occasion!</p>
+			<div class="column-1">
+			</div>
+			<div class="column-2">
+			</div>
 		</div> <!-- /#content -->
 		
 		<footer>
