--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
 				<ul id="main-nav">
 					<li id="nav-1"><a href="index.html">Home</a></li>
 					<li id="nav-2" class="current"><a href="services.html">Services</a></li>
-					<li id="nav-3"><a href="rentals.html">Gallery</a></li>
+					<li id="nav-3"><a href="gallery.html">Gallery</a></li>
 					<li id="nav-4"><a href="contact.html">Contact</a></li>
 					<span class="clear"></span>
 				</ul>
@@ -63,8 +63,8 @@
 			<p>&copy; Copyright 2011 - For Every Occasion LLC. All rights reserved.</p>
 			<ul id="footer-nav">
 				<li><a href="index.html">Home</a></li>
-				<li>|<a href="decor.html">Services</a></li>
-				<li>|<a href="rentals.html">Gallery</a></li>
+				<li>|<a href="services.html">Services</a></li>
+				<li>|<a href="gallery.html">Gallery</a></li>
 				<li>|<a href="contact.html">Contact</a></li>
 			</ul>
 			<span class="clear"></span>
