latest style updates, contact page starting to come together

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 	
 </head>
 <body>
-	<div id="home" class="page">
+	<div id="contact-us" class="page">
 		<div id="header-container">
 			<header>
 				<a id="logo" href="index.html">For Every Occasion</a>
@@ -30,6 +30,9 @@
 		
 		<div id="content">
 			<div class="column-1">
+				<h2>Contact Us</h2>
+				<p class="phone">Phone: 1.801.555.5555</p>
+				<p class="email">Email: <a href="mailto:4everyoccasion@gmail.com">4everyoccasion@gmail.com</a></p>
 			</div>
 			<div class="column-2">
 			</div>
