--- a/gallery.html
+++ b/gallery.html
@@ -38,77 +38,77 @@
 					<ul class="ad-thumb-list">
 						<li>
 							<a href="img/gallery/1.jpg">
-								<img src="img/gallery/thumbs/t1.jpg" class="image0" title="Here's a lovely Photo">
+								<img src="img/gallery/thumbs/t1.jpg" title="Title Needed" alt="Description Needed" class="image0">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/10.jpg">
-								<img src="img/gallery/thumbs/t10.jpg" title="A title for 10.jpg" alt="This is a nice, and incredibly descriptive, description of the image 10.jpg" class="image1">
+								<img src="img/gallery/thumbs/t10.jpg" title="Title Needed" alt="Description Needed" class="image1">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/11.jpg">
-								<img src="img/gallery/thumbs/t11.jpg" title="A title for 11.jpg" longdesc="http://coffeescripter.com" alt="This is a nice, and incredibly descriptive, description of the image 11.jpg" class="image2">
+								<img src="img/gallery/thumbs/t11.jpg" title="Title Needed" alt="Description Needed" class="image2">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/12.jpg">
-								<img src="img/gallery/thumbs/t12.jpg" title="A title for 12.jpg" alt="This is a nice, and incredibly descriptive, description of the image 12.jpg" class="image3">
+								<img src="img/gallery/thumbs/t12.jpg" title="Title Needed" alt="Description Needed" class="image3">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/13.jpg">
-								<img src="img/gallery/thumbs/t13.jpg" title="A title for 13.jpg" alt="This is a nice, and incredibly descriptive, description of the image 13.jpg" class="image4">
+								<img src="img/gallery/thumbs/t13.jpg" title="Title Needed" alt="Description Needed" class="image4">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/14.jpg">
-								<img src="img/gallery/thumbs/t14.jpg" title="A title for 14.jpg" alt="This is a nice, and incredibly descriptive, description of the image 14.jpg" class="image5">
+								<img src="img/gallery/thumbs/t14.jpg" title="Title Needed" alt="Description Needed" class="image5">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/2.jpg">
-								<img src="img/gallery/thumbs/t2.jpg" title="A title for 2.jpg" alt="This is a nice, and incredibly descriptive, description of the image 2.jpg" class="image6">
+								<img src="img/gallery/thumbs/t2.jpg" title="Title Needed" alt="Description Needed" class="image6">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/3.jpg">
-								<img src="img/gallery/thumbs/t3.jpg" title="A title for 3.jpg" alt="This is a nice, and incredibly descriptive, description of the image 3.jpg" class="image7">
+								<img src="img/gallery/thumbs/t3.jpg" title="Title Needed" alt="Description Needed" class="image7">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/4.jpg">
-								<img src="img/gallery/thumbs/t4.jpg" title="Yummy Juice!" alt="Here is where we'd put the description for the delicious looking juice. Yumm!" class="image8">
+								<img src="img/gallery/thumbs/t4.jpg" title="Title Needed" alt="Description Needed" class="image8">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/5.jpg">
-								<img src="img/gallery/thumbs/t5.jpg" title="A title for 5.jpg" alt="This is a nice, and incredibly descriptive, description of the image 5.jpg" class="image9">
+								<img src="img/gallery/thumbs/t5.jpg" title="Title Needed" alt="Description Needed" class="image9">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/6.jpg">
-								<img src="img/gallery/thumbs/t6.jpg" title="A title for 6.jpg" alt="This is a nice, and incredibly descriptive, description of the image 6.jpg" class="image10">
+								<img src="img/gallery/thumbs/t6.jpg" title="Title Needed" alt="Description Needed" class="image10">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/7.jpg">
-								<img src="img/gallery/thumbs/t7.jpg" title="A title for 7.jpg" alt="This is a nice, and incredibly descriptive, description of the image 7.jpg" class="image11">
+								<img src="img/gallery/thumbs/t7.jpg" title="Title Needed" alt="Description Needed" class="image11">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/8.jpg">
-								<img src="img/gallery/thumbs/t8.jpg" title="A title for 8.jpg" alt="This is a nice, and incredibly descriptive, description of the image 8.jpg" class="image12">
+								<img src="img/gallery/thumbs/t8.jpg" title="Title Needed" alt="Description Needed" class="image12">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/9.jpg">
-								<img src="img/gallery/thumbs/t9.jpg" title="A title for 9.jpg" alt="This is a nice, and incredibly descriptive, description of the image 9.jpg" class="image13">
+								<img src="img/gallery/thumbs/t9.jpg" title="Title Needed" alt="Description Needed" class="image13">
 							</a>
 						</li>
 						<li>
 							<a href="img/gallery/15.jpg">
-								<img src="img/gallery/thumbs/t15.jpg" title="A title for 12.jpg" alt="This is a nice, and incredibly descriptive, description of the image 12.jpg" class="image14">
+								<img src="img/gallery/thumbs/t15.jpg" title="Title Needed" alt="Description Needed" class="image14">
 							</a>
 						</li>
 					</ul>
