building up services pages

--- a/services.html
+++ b/services.html
@@ -31,28 +31,58 @@
 		<div id="content">
 			
 			<ul class="services-list">
+				<li class="consultant">
+					<a class="services-thumbnail" href="details-consultant.html"><img src="img/thumbnail-consultant.jpg" alt=""></a>
+					<h3><a href="details-consultant.html">Consultant / Planner / Coordinator</a></h3>
+					<p>You decide! Do you just need some advice to pull it together or do you want all the details taken care of.<br /><a href="details-consultant.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
+				<li class="decorations">
+					<a class="services-thumbnail" href="details-decorations.html"><img src="img/thumbnail-decorations.jpg" alt=""></a>
+					<h3><a href="details-decorations.html">Decorations / Rentals</a></h3>
+					<p>Tables, Chairs, Linens, Backdrops and everything else you may need!<br /><a href="details-decorations.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
+				<li class="packages">
+					<a class="services-thumbnail" href="details-packages.html"><img src="img/thumbnail-floral.jpg" alt=""></a>
+					<h3><a href="details-packages.html">Packages</a></h3>
+					<p>Ready to go rentals * Go with one of our packages that meets your need or customize one of your liking.<br /><a href="details-packages.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
+				<li class="invitations">
+					<a class="services-thumbnail" href="details-invitations.html"><img src="img/thumbnail-invitations.jpg" alt=""></a>
+					<h3><a href="details-invitations.html">Invitations</a></h3>
+					<p>Style, Quality, and Value..... You must take a look at these!!!<br /><a href="details-invitations.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
+				<li class="special-events">
+					<a class="services-thumbnail" href="details-specialEvents.html"><img src="img/thumbnail-specialEvents.jpg" alt=""></a>
+					<h3><a href="details-specialEvents.html">Special Events</a></h3>
+					<p>For Every Occasion can help with all of your celebrations.<br /><a href="details-specialEvents.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
 				<li class="flowers">
-					<a class="services-thumbnail" href="details-flowers.html"><img src="img/flowers-thumb-1.jpg" alt=""></a>
+					<a class="services-thumbnail" href="details-flowers.html"><img src="img/thumbnail-floral.jpg" alt=""></a>
 					<h3><a href="details-flowers.html">Flowers</a></h3>
-					<p>We have a wonderful variety of Flower Arrangements available to you, ranging from daisies to dandelions to many, many others. <a href="details-flowers.html">Click Here</a> for more details.</p>
+					<p>We have many creative floral designs especially for you.<br /><a href="details-flowers.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
-				<li class="backdrops">
-					<a class="services-thumbnail" href="details-flowers.html"><img src="img/flowers-thumb-1.jpg" alt=""></a>
-					<h3><a href="details-flowers.html">Flowers</a></h3>
-					<p>We have a wonderful variety of Flower Arrangements available to you, ranging from daisies to dandelions to many, many others. <a href="details-flowers.html">Click Here</a> for more details.</p>
+				<li class="cakes">
+					<a class="services-thumbnail" href="details-cakes.html"><img src="img/thumbnail-cake.jpg" alt=""></a>
+					<h3><a href="details-cakes.html">Cakes * Cupcakes</a></h3>
+					<p>We of it all.. Any size, design and price range.... Yum<br /><a href="details-cakes.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
-				<li class="linens">
-					<a class="services-thumbnail" href="details-flowers.html"><img src="img/flowers-thumb-1.jpg" alt=""></a>
-					<h3><a href="details-flowers.html">Flowers</a></h3>
-					<p>We have a wonderful variety of Flower Arrangements available to you, ranging from daisies to dandelions to many, many others. <a href="details-flowers.html">Click Here</a> for more details.</p>
+				<li class="music">
+					<a class="services-thumbnail" href="details-music.html"><img src="img/thumbnail-music.jpg" alt=""></a>
+					<h3><a href="details-music.html">Music</a></h3>
+					<p>DJ's, Harpist, Pianist, Stereo System<br /><a href="details-music.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
-				<li class="flowers">
-					<a class="services-thumbnail" href="details-flowers.html"><img src="img/flowers-thumb-1.jpg" alt=""></a>
-					<h3><a href="details-flowers.html">Flowers</a></h3>
-					<p>We have a wonderful variety of Flower Arrangements available to you, ranging from daisies to dandelions to many, many others. <a href="details-flowers.html">Click Here</a> for more details.</p>
+				<li class="lighting">
+					<a class="services-thumbnail" href="details-lighting.html"><img src="img/thumbnail-lighting.jpg" alt=""></a>
+					<h3><a href="details-lighting.html">Lighting</a></h3>
+					<p>We'll be happy to customize a design for your venue.<br /><a href="details-lighting.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 			</ul>
