adding in catering link

--- a/services.html
+++ b/services.html
@@ -85,6 +85,12 @@
 					<p>We'll be happy to customize a design for your venue.<br /><a href="details-lighting.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
+				<li class="catering">
+					<a class="services-thumbnail" href="details-catering.html"><img src="img/thumbnail-catering.jpg" alt=""></a>
+					<h3><a href="details-catering.html">Catering / Refreshments</a></h3>
+					<p>Variety of delicious menus! Big in taste, not in the price<br /><a href="details-catering.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
 			</ul>
 			
 		</div> <!-- /#content -->
