minor bug with consultant header image

--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
 				<li class="consultant">
 					<a class="services-thumbnail" href="details-consultant.html"><img src="img/thumbnail-consultant.jpg" alt=""></a>
 					<h3><a href="details-consultant.html">Consultant / Planner / Coordinator</a></h3>
-					<p>You decide! Do you just need some advice to pull it together or do you want all the details taken care of.<br /><a href="details-consultant.html">Click Here</a> for more details.</p>
+					<p>You decide! Do you just need some advice to pull it together or do you want all the details taken care of. &nbsp; <a href="details-consultant.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="decorations">
