building service details pages

--- a/services.html
+++ b/services.html
@@ -62,9 +62,9 @@
 					<span class="clear"></span>
 				</li>
 				<li class="flowers">
-					<a class="services-thumbnail" href="details-flowers.html"><img src="img/thumbnail-floral.jpg" alt=""></a>
-					<h3><a href="details-flowers.html">Flowers</a></h3>
-					<p>We have many creative floral designs especially for you.<br /><a href="details-flowers.html">Click Here</a> for more details.</p>
+					<a class="services-thumbnail" href="details-floral.html"><img src="img/thumbnail-floral.jpg" alt=""></a>
+					<h3><a href="details-floral.html">Flowers</a></h3>
+					<p>We have many creative floral designs especially for you.<br /><a href="details-floral.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="cakes">
@@ -107,7 +107,7 @@
 		</footer>
 	</div>
 	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>t
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	
 </body>
