content for consultant page

--- a/details-consultant.html
+++ b/details-consultant.html
@@ -31,15 +31,21 @@
 		<div id="content">
 			<h3 class="consultant-header">Consultant</h3>
 			<div class="left-side">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+				<h4>Consultant</h4>
+				<p>We're happy to help with ideas and the how too's in order to make your event less stressful</p>
+				<h4>Planner</h4>
+				<p>Taking shared ideas and working out the details to make your event everything you hope for. All the details of how to pull it together. We can help you organize so it's ready to set up!</p>
+				<h4>Coordinator</h4>
+				<p class="last">Every detail is taken care of, we make sure your vision is followed through with. Your part is to enjoy and celebrate!</p>
 			</div>
 			<div class="right-side">
 				<img src="img/details-consultant.jpg" alt="" title="flowers">
 			</div>
 			<span class="clear"></span>
 			<div class="lower-half">
-				<p>This area will contain details and pricing.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum officia deserunt mollit anim id est laborum</p>
+				<p class="diy"><span>DIY</span> -  If you want to <b>"do it yourself"</b> we provide everything you need. Vendors, décor, knowledge</p>
+				<p class="a-la-carte"><span>A La Carte</span> - You <b>"pick and choose"</b> the services you need help with</p>
+				<p class="whole-package"><span>The Whole Package</span> - Why reinvent the wheel, <b>"we know what to do"</b>, where to go, at an affordable price</p>
 			</div>
 			
 		</div> <!-- /#content -->
