CSS compatibility for older versions of IE, alt text for images in consultant details page

--- a/details-consultant.html
+++ b/details-consultant.html
@@ -47,9 +47,9 @@
 				<p class="whole-package"><span>The Whole Package</span>Why reinvent the wheel, <b>"we know what to do"</b>, where to go, at an affordable price</p>
 			</div>
 			<ul class="img-row">
-				<li><img src="img/consultant-img-1.jpg"></li>
-				<li><img src="img/consultant-img-2.jpg"></li>
-				<li><img src="img/consultant-img-3.jpg"></li>
+				<li><img src="img/consultant-img-1.jpg" title="Wedding Dress" alt="Wedding Dress"></li>
+				<li><img src="img/consultant-img-2.jpg" title="801-319-1159" alt="801-319-1159"></li>
+				<li><img src="img/consultant-img-3.jpg" title="Flowers" alt="Flowers"></li>
 				<span class="clear"></span>
 			</ul>
 		</div> <!-- /#content -->
