style and content for a few more service details pages

--- a/details-consultant.html
+++ b/details-consultant.html
@@ -29,8 +29,7 @@
 		</div> <!-- /#header-container -->
 		
 		<div id="content" class="consultant">
-			<h3 class="consultant-header">Consultant / Coordinator / Planner</h3>
-			<h4 class="consultant-subheader">Saves You Time and Money</h4>
+			<h3 class="consultant-header">Consultant / Coordinator / Planner, Saves You Time and Money</h3>
 			<div class="deets-container-1">
 				<h4>Consultant -</h4>
 				<p>We're happy to help with ideas and the how too's in order to make your event less stressful</p>
