--- a/details-floral.html
+++ b/details-floral.html
@@ -30,18 +30,47 @@
 		
 		<div id="content">
 			<h3 class="floral-header">Flowers</h3>
-			<div class="left-side">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			<div class="deets-container-1">
+				<ul>
+					<li>Silk or Fresh Flowers</li>
+					<li>Large or Small Orders</li>
+					<li>Professional Florists</li>
+					<li>Excellent Prices</li>
+				</ul>
 			</div>
-			<div class="right-side">
-				<img src="img/details-floral.jpg" alt="" title="flowers">
+			<div class="deets-container-2">
+				<p>Prices</p>
+				<ul class="price-description">
+					<li>Bridal Bouquet:</li>
+					<li>Bridesmaids:</li>
+					<li>Bridal Portrait Bouquet:</li>
+					<li>Flower Girl:</li>
+					<li>Corsages:</li>
+					<li>Groom Boutonniere:</li>
+					<li>Boutonniere:</li>
+					<li>Centerpieces:</li>
+					<li>Cake Flowers:</li>
+				</ul>
+				<ul class="pricing">
+					<li>$65.00 and Up</li>
+					<li>$22.00 and Up</li>
+					<li>$25.00 and Up</li>
+					<li>$15.00 and Up</li>
+					<li>$22.00 and Up</li>
+					<li>$9.50 and Up</li>
+					<li>$8.00 and Up</li>
+					<li>$12.00 and Up</li>
+					<li>$20.00 and Up</li>
+				</ul>
+				<span class="clear"></span>
+				<p>Each Wedding is Unique and prices shown are for a general estimate.</p>
 			</div>
-			<span class="clear"></span>
-			<div class="lower-half">
-				<p>This area will contain details and pricing.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum officia deserunt mollit anim id est laborum</p>
-			</div>
-			
+			<ul class="img-row">
+				<li><img src="img/floral-img-1.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
+				<li><img src="img/floral-img-2.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
+				<li><img src="img/floral-img-3.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
+				<span class="clear"></span>
+			</ul>
 		</div> <!-- /#content -->
 		
 		<footer>
