--- a/details-specialEvents.html
+++ b/details-specialEvents.html
@@ -28,20 +28,40 @@
 			</header>
 		</div> <!-- /#header-container -->
 		
-		<div id="content">
+		<div id="content" class="specialEvents">
 			<h3 class="specialEvents-header">Special Events</h3>
-			<div class="left-side">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			<div class="deets-container-1">
+				<ul>
+					<li style="margin-bottom: 5px;"><b>Events we've done: &nbsp; (Besides Weddings!)</b></li>
+					<li>Bridal Showers</li>
+					<li>Baby Showers</li>
+					<li>Family Reunions</li>
+					<li>Class Reunions</li>
+					<li>Birthday Parties</li>
+					<li>Anniversaries</li>
+					<li>Quinceanera</li>
+					<li>Farewells / Homecomings</li>
+					<li>Company Parties</li>
+					<li>Holiday Decorating</li>
+				</ul>
 			</div>
-			<div class="right-side">
-				<img src="img/details-specialEvents.jpg" alt="" title="flowers">
+			<div class="deets-container-2">
+				<ul>
+					<li style="font-size: 18px; text-transform: none;"><b>Imagine...</b></li>
+					<li>* A place that meets all budget needs whether big or small</li>
+					<li>* A place you can find the experts that really care about what you want</li>
+					<li>* A place that's; happening with new ideas, displays, new trends, and old values!</li>
+					<li>* A place you can experience the art of "do it yourself" or turn it all over to us</li>
+					<li>* A place where you, family and friends can go that's warm, inviting and stress free</li>
+					<li style="font-size: 18px; text-transform: none; line-height: 1.3;"><b>For Every Occasion<br/>is that place!</b></li>
+				</ul>
 			</div>
-			<span class="clear"></span>
-			<div class="lower-half">
-				<p>This area will contain details and pricing.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum officia deserunt mollit anim id est laborum</p>
-			</div>
-			
+			<ul class="img-row">
+				<li><img src="img/specialEvents-2.jpg" title="Kid Friendly" alt="Kid Friendly"></li>
+				<li><img src="img/specialEvents-1.jpg" title="Shower" alt="Shower"></li>
+				<li><img src="img/specialEvents-3.jpg" title="Homecoming" alt="Homecoming"></li>
+				<span class="clear"></span>
+			</ul>
 		</div> <!-- /#content -->
 		
 		<footer>
