--- a/details-cakes.html
+++ b/details-cakes.html
@@ -29,18 +29,31 @@
 		</div> <!-- /#header-container -->
 		
 		<div id="content">
-			<h3 class="cake-header">Cake</h3>
-			<div class="left-side">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			<h3 class="cake-header">Cakes and Cupcakes</h3>
+			<div class="deets-container-1">
+				<p class="fancy">Order your cake in any size, style and flavor that suits your wishes. Superb taste with excellent pricing!</p>
 			</div>
-			<div class="right-side">
-				<img src="img/details-cake.jpg" alt="" title="flowers">
+			<div class="deets-container-2">
+				<p>Prices</p>
+				<ul class="price-description">
+					<li>Wedding Cakes</li>
+					<li>Cupcakes - Mini</li>
+					<li>Cupcakes</li>
+				</ul>
+				<ul class="pricing">
+					<li>Start at $65</li>
+					<li>Start at $0.95 each</li>
+					<li>Start at $1.95 each</li>
+				</ul>
+				<span class="clear"></span>
+				<p>Please call to detail your order for pricing, cakes are as unique as you are!</p>
 			</div>
-			<span class="clear"></span>
-			<div class="lower-half">
-				<p>This area will contain details and pricing.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum officia deserunt mollit anim id est laborum</p>
-			</div>
+			<ul class="img-row">
+				<li><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<span class="clear"></span>
+			</ul>
 			
 		</div> <!-- /#content -->
 		
