music details done

--- a/details-music.html
+++ b/details-music.html
@@ -28,21 +28,36 @@
 			</header>
 		</div> <!-- /#header-container -->
 		
-		<div id="content">
+		<div id="content" class="music">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="music-header">Music</h3>
-			<div class="left-side">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			<div class="deets-container-1">
+				<p class="fancy">Setting the Mood for your special occasion is very important. Whether it's soft and calm or loud and exciting, using one of our professionals will get it just right!</p>
 			</div>
-			<div class="right-side">
-				<img src="img/details-music.jpg" alt="" title="flowers">
+			<div class="deets-container-2">
+				<p>Prices</p>
+				<ul class="price-description">
+					<li>MC's / DJ's</li>
+					<li>Pianist</li>
+					<li>Harpist</li>
+					<li>Stereo / Cordless Mic</li>
+					<li>TV / DVD Rental</li>
+				</ul>
+				<ul class="pricing">
+					<li>Starting at $250</li>
+					<li>Starting at $75</li>
+					<li>Starting at $200</li>
+					<li>$75.00</li>
+					<li>$65.00</li>
+				</ul>
+				<span class="clear"></span>
 			</div>
-			<span class="clear"></span>
-			<div class="lower-half">
-				<p>This area will contain details and pricing.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum officia deserunt mollit anim id est laborum</p> 
-			</div>
-			
+			<ul class="img-row">
+				<li><img src="img/music-img-1.jpg" title="Dancing" alt="Dancing"></li>
+				<li><img src="img/music-img-2.jpg" title="Harp" alt="Harp"></li>
+				<li><img src="img/music-img-3.jpg" title="Dancing" alt="Dancing"></li>
+				<span class="clear"></span>
+			</ul>
 		</div> <!-- /#content -->
 		
 		<footer>
