catering details page done

--- a/details-catering.html
+++ b/details-catering.html
@@ -28,48 +28,20 @@
 			</header>
 		</div> <!-- /#header-container -->
 		
-		<div id="content">
+		<div id="content" class="catering">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="catering-header">Catering</h3>
 			<div class="deets-container-1">
-				<ul>
-					<li>Silk or Fresh Flowers</li>
-					<li>Large or Small Orders</li>
-					<li>Professional Florists</li>
-					<li>Excellent Prices</li>
-				</ul>
+				<p>We cater from small occasions to large events. Using your ideas or helping with menu suggestions, the event will be a success. Ice cream to Salsa Bars, Crepes to Prime Rib, Brownies to Fruit Kabobs!</p>
+				<p>Presentation is as important as great taste, and we will make your choices unique and a hit with your guests! Nobody details the buffet table like" For Every Occasion" does!!</p>
 			</div>
 			<div class="deets-container-2">
-				<p>Prices</p>
-				<ul class="price-description">
-					<li>Bridal Bouquet:</li>
-					<li>Bridesmaids:</li>
-					<li>Bridal Portrait Bouquet:</li>
-					<li>Flower Girl:</li>
-					<li>Corsages:</li>
-					<li>Groom Boutonniere:</li>
-					<li>Boutonniere:</li>
-					<li>Centerpieces:</li>
-					<li>Cake Flowers:</li>
-				</ul>
-				<ul class="pricing">
-					<li>$65.00 and Up</li>
-					<li>$22.00 and Up</li>
-					<li>$25.00 and Up</li>
-					<li>$15.00 and Up</li>
-					<li>$22.00 and Up</li>
-					<li>$9.50 and Up</li>
-					<li>$8.00 and Up</li>
-					<li>$12.00 and Up</li>
-					<li>$20.00 and Up</li>
-				</ul>
-				<span class="clear"></span>
-				<p>Each Wedding is Unique and prices shown are for a general estimate.</p>
+				<p>Prices start at $2.50 per person and up, depending on menu. Includes all serving ware, décor, set-up, and maintaining your buffet. Let us bid your event and show what we can do!</p>
 			</div>
 			<ul class="img-row">
-				<li><img src="img/floral-img-1.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
-				<li><img src="img/floral-img-2.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
-				<li><img src="img/floral-img-3.jpg" title="Flower Arrangement" alt="Flower Arrangement"></li>
+				<li><img src="img/catering-img-1.jpg" title="Drinks" alt="Drinks"></li>
+				<li><img src="img/catering-img-2.jpg" title="Plate of Food" alt="Plate of Food"></li>
+				<li><img src="img/catering-img-3.jpg" title="Popcorn Display" alt="Popcorn Display"></li>
 				<span class="clear"></span>
 		</div> <!-- /#content -->
 		
