--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<title>Gallery :: For Every Occasion</title>
+	<title>Gallery || For Every Occasion</title>
 	
+	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.ad-gallery.css">
