adding in meta tags for SEO

--- a/details-floral.html
+++ b/details-floral.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="author" content="Tyler Nielsen, tynielsen@gmail.com">
+	<meta name="description" content="We handle all the details of your event, whether big or small - Contact us today to learn more about our services and schedule your special occasion!">
+	<meta name="keywords" content="for every occasion rentals, for every occasion, every, occasion, wedding professionals, wedding planner, wedding, consultant, planner, coordinator, wedding help, special, event, bride, bridal, shower, showers, baby, graduation, family, reunion, birthday, party, parties, engage, engaged, engagement, anniversary, quinceanera, farewell, homecoming, company, holiday, decorating, decoration, cake, invitations, flower, floral, bouquet, boutonniere, rental, rent, music, musician, dj, mc, harp, harpist, professional, profession, exciting, piano, pianist, stereo, cordless, mic, tv, dvd, lighting, lights, caterer, catering, utah">
 	
 	<title>Service Details || For Every Occasion</title>
 	
@@ -75,7 +78,7 @@
 		</div> <!-- /#content -->
 		
 		<footer>
-			<p>&copy; Copyright 2011 - For Every Occasion LLC. All rights reserved.</p>
+			<p>&copy; Copyright 2012 - For Every Occasion, LLC. All rights reserved.</p>
 			<ul id="footer-nav">
 				<li><a href="index.html">Home</a></li>
 				<li>|<a href="services.html">Services</a></li>
