playing with the layout

--- a/details-cakes.html
+++ b/details-cakes.html
@@ -31,9 +31,15 @@
 			</header>
 		</div> <!-- /#header-container -->
 		
-		<div id="content">
+		<div id="content" class="cakes">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="cake-header">Cakes and Cupcakes</h3>
+			<ul class="img-row">
+				<li><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<span class="clear"></span>
+			</ul>
 			<div class="deets-container-1">
 				<p class="fancy">Order your cake in any size, style and flavor that suits your wishes. Superb taste with excellent pricing!</p>
 			</div>
@@ -52,12 +58,6 @@
 				<span class="clear"></span>
 				<p>Please call to detail your order for pricing, cakes are as unique as you are!</p>
 			</div>
-			<ul class="img-row">
-				<li><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<span class="clear"></span>
-			</ul>
 			
 		</div> <!-- /#content -->
 		
