new details header images

--- a/details-consultant.html
+++ b/details-consultant.html
@@ -43,10 +43,13 @@
 			<div class="deets-container-1">
 				<h4>Consultant -</h4>
 				<p>We're happy to help with ideas and the how too's in order to make your event less stressful</p>
+				<span class="clear"></span>
 				<h4>Planner -</h4>
 				<p>Taking shared ideas and working out the details to make your event everything you hope for. All the details of how to pull it together. We can help you organize so it's ready to set up!</p>
+				<span class="clear"></span>
 				<h4>Coordinator -</h4>
 				<p class="last">Every detail is taken care of, we make sure your vision is followed through with. Your part is to enjoy and celebrate!</p>
+				<span class="clear"></span>
 			</div>
 			<div class="deets-container-2">
 				<p class="diy"><span>DIY</span>If you want to <b>"do it yourself"</b> we provide everything you need. Vendors, décor, knowledge</p>
