--- a/details-consultant.html
+++ b/details-consultant.html
@@ -10,6 +10,8 @@
 	
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link href="css/reset.css" type="text/css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" type="text/css" rel="stylesheet">
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
