--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,8 @@
 	
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.ad-gallery.css">
 	<!--[if lt IE 9]>
@@ -41,79 +43,49 @@
 				<div class="ad-thumbs">
 					<ul class="ad-thumb-list">
 						<li>
-							<a href="img/gallery/1.jpg">
-								<img src="img/gallery/thumbs/t1.jpg" title="Title Needed" alt="Description Needed" class="image0">
-							</a>
+							<a href="img/gallery/1.jpg"><img src="img/gallery/thumbs/t1.jpg" class="image0"></a>
 						</li>
 						<li>
-							<a href="img/gallery/10.jpg">
-								<img src="img/gallery/thumbs/t10.jpg" title="Title Needed" alt="Description Needed" class="image1">
-							</a>
+							<a href="img/gallery/10.jpg"><img src="img/gallery/thumbs/t10.jpg" class="image1"></a>
 						</li>
 						<li>
-							<a href="img/gallery/11.jpg">
-								<img src="img/gallery/thumbs/t11.jpg" title="Title Needed" alt="Description Needed" class="image2">
-							</a>
+							<a href="img/gallery/11.jpg"><img src="img/gallery/thumbs/t11.jpg" class="image2"></a>
 						</li>
 						<li>
-							<a href="img/gallery/12.jpg">
-								<img src="img/gallery/thumbs/t12.jpg" title="Title Needed" alt="Description Needed" class="image3">
-							</a>
+							<a href="img/gallery/12.jpg"><img src="img/gallery/thumbs/t12.jpg" class="image3"></a>
 						</li>
 						<li>
-							<a href="img/gallery/13.jpg">
-								<img src="img/gallery/thumbs/t13.jpg" title="Title Needed" alt="Description Needed" class="image4">
-							</a>
+							<a href="img/gallery/13.jpg"><img src="img/gallery/thumbs/t13.jpg" class="image4"></a>
 						</li>
 						<li>
-							<a href="img/gallery/14.jpg">
-								<img src="img/gallery/thumbs/t14.jpg" title="Title Needed" alt="Description Needed" class="image5">
-							</a>
+							<a href="img/gallery/14.jpg"><img src="img/gallery/thumbs/t14.jpg" class="image5"></a>
 						</li>
 						<li>
-							<a href="img/gallery/2.jpg">
-								<img src="img/gallery/thumbs/t2.jpg" title="Title Needed" alt="Description Needed" class="image6">
-							</a>
+							<a href="img/gallery/2.jpg"><img src="img/gallery/thumbs/t2.jpg" class="image6"></a>
 						</li>
 						<li>
-							<a href="img/gallery/3.jpg">
-								<img src="img/gallery/thumbs/t3.jpg" title="Title Needed" alt="Description Needed" class="image7">
-							</a>
+							<a href="img/gallery/3.jpg"><img src="img/gallery/thumbs/t3.jpg" class="image7"></a>
 						</li>
 						<li>
-							<a href="img/gallery/4.jpg">
-								<img src="img/gallery/thumbs/t4.jpg" title="Title Needed" alt="Description Needed" class="image8">
-							</a>
+							<a href="img/gallery/4.jpg"><img src="img/gallery/thumbs/t4.jpg" class="image8"></a>
 						</li>
 						<li>
-							<a href="img/gallery/5.jpg">
-								<img src="img/gallery/thumbs/t5.jpg" title="Title Needed" alt="Description Needed" class="image9">
-							</a>
+							<a href="img/gallery/5.jpg"><img src="img/gallery/thumbs/t5.jpg" class="image9"></a>
 						</li>
 						<li>
-							<a href="img/gallery/6.jpg">
-								<img src="img/gallery/thumbs/t6.jpg" title="Title Needed" alt="Description Needed" class="image10">
-							</a>
+							<a href="img/gallery/6.jpg"><img src="img/gallery/thumbs/t6.jpg" class="image10"></a>
 						</li>
 						<li>
-							<a href="img/gallery/7.jpg">
-								<img src="img/gallery/thumbs/t7.jpg" title="Title Needed" alt="Description Needed" class="image11">
-							</a>
+							<a href="img/gallery/7.jpg"><img src="img/gallery/thumbs/t7.jpg" class="image11"></a>
 						</li>
 						<li>
-							<a href="img/gallery/8.jpg">
-								<img src="img/gallery/thumbs/t8.jpg" title="Title Needed" alt="Description Needed" class="image12">
-							</a>
+							<a href="img/gallery/8.jpg"><img src="img/gallery/thumbs/t8.jpg" class="image12"></a>
 						</li>
 						<li>
-							<a href="img/gallery/9.jpg">
-								<img src="img/gallery/thumbs/t9.jpg" title="Title Needed" alt="Description Needed" class="image13">
-							</a>
+							<a href="img/gallery/9.jpg"><img src="img/gallery/thumbs/t9.jpg" class="image13"></a>
 						</li>
 						<li>
-							<a href="img/gallery/15.jpg">
-								<img src="img/gallery/thumbs/t15.jpg" title="Title Needed" alt="Description Needed" class="image14">
-							</a>
+							<a href="img/gallery/15.jpg"><img src="img/gallery/thumbs/t15.jpg" class="image14"></a>
 						</li>
 					</ul>
 				</div>
