--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link href="css/reset.css" type="text/css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" type="text/css" rel="stylesheet">
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -33,8 +35,8 @@
 		
 		<div id="content">
 			<ul class="image-carousel">
-				<li class="active"><img src="img/home-carousel-img-1.jpg" src="" /></li>
-				<li><img src="img/home-carousel-img-2.jpg" src="" /></li>
+				<li class="active"><img src="img/home-carousel-img-2.jpg" src="" /></li>
+				<li><img src="img/home-carousel-img-1.jpg" src="" /></li>
 				<li><img src="img/home-carousel-img-3.jpg" src="" /></li>
 			</ul>
 			<p class="intro-p">We handle all the details of your event, whether big or small - Contact us today to learn more about our services and schedule your special occasion!</p>
