adding in frames to all pages

--- a/details-cakes.html
+++ b/details-cakes.html
@@ -43,9 +43,11 @@
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
+				<div class="background"></div>
 				<p class="fancy">Order your cake in any size, style and flavor that suits your wishes. Superb taste with excellent pricing!</p>
 			</div>
 			<div class="deets-container-2">
+				<div class="background"></div>
 				<p>Prices</p>
 				<ul class="price-description">
 					<li>Wedding Cakes</li>
@@ -74,6 +76,8 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
+	<div id="rpt-red-ribbon-left" class="frame"></div>
+	<div id="rpt-red-ribbon-right" class="frame"></div>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
