--- a/details-catering.html
+++ b/details-catering.html
@@ -43,10 +43,12 @@
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
+				<div class="background"></div>
 				<p>We cater from small occasions to large events. Using your ideas or helping with menu suggestions, the event will be a success. Ice cream to Salsa Bars, Crepes to Prime Rib, Brownies to Fruit Kabobs!</p>
 				<p>Presentation is as important as great taste, and we will make your choices unique and a hit with your guests! Nobody details the buffet table like" For Every Occasion" does!!</p>
 			</div>
 			<div class="deets-container-2">
+				<div class="background"></div>
 				<p>Prices start at $2.50 per person and up, depending on menu. Includes all serving ware, décor, set-up, and maintaining your buffet. Let us bid your event and show what we can do!</p>
 			</div>
 		</div> <!-- /#content -->
@@ -62,6 +64,8 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
+	<div id="rpt-red-ribbon-left" class="frame"></div>
+	<div id="rpt-red-ribbon-right" class="frame"></div>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
