--- a/details-consultant.html
+++ b/details-consultant.html
@@ -43,6 +43,7 @@
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
+				<div class="background"></div>
 				<h4>Consultant -</h4>
 				<p>We're happy to help with ideas and the how too's in order to make your event less stressful</p>
 				<span class="clear"></span>
@@ -54,6 +55,7 @@
 				<span class="clear"></span>
 			</div>
 			<div class="deets-container-2">
+				<div class="background"></div>
 				<p class="diy"><span>DIY</span>If you want to <b>"do it yourself"</b> we provide everything you need. Vendors, décor, knowledge</p>
 				<span class="clear"></span>
 				<p class="a-la-carte"><span>A La Carte</span>You <b>"pick and choose"</b> the services you need help with</p>
@@ -73,6 +75,8 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
+	<div id="rpt-red-ribbon-left" class="frame"></div>
+	<div id="rpt-red-ribbon-right" class="frame"></div>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
