--- a/details-floral.html
+++ b/details-floral.html
@@ -43,6 +43,7 @@
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
+				<div class="background"></div>
 				<ul>
 					<li>Silk or Fresh Flowers</li>
 					<li>Large or Small Orders</li>
@@ -51,6 +52,7 @@
 				</ul>
 			</div>
 			<div class="deets-container-2">
+				<div class="background"></div>
 				<p>Prices</p>
 				<ul class="price-description">
 					<li>Bridal Bouquet:</li>
@@ -90,6 +92,8 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
+	<div id="rpt-red-ribbon-left" class="frame"></div>
+	<div id="rpt-red-ribbon-right" class="frame"></div>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
