--- a/details-music.html
+++ b/details-music.html
@@ -43,9 +43,11 @@
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
+				<div class="background"></div>
 				<p class="fancy">Setting the Mood for your special occasion is very important. Whether it's soft and calm or loud and exciting, using one of our professionals will get it just right!</p>
 			</div>
 			<div class="deets-container-2">
+				<div class="background"></div>
 				<p>Prices</p>
 				<ul class="price-description">
 					<li>MC's / DJ's</li>
@@ -76,6 +78,8 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
+	<div id="rpt-red-ribbon-left" class="frame"></div>
+	<div id="rpt-red-ribbon-right" class="frame"></div>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
