--- a/gallery.html
+++ b/gallery.html
@@ -102,6 +102,8 @@
 		</ul>
 		<span class="clear"></span>
 	</footer>
+	<div id="rpt-gold-ribbon-left" class="frame"></div>
+	<div id="rpt-gold-ribbon-right" class="frame"></div>
 	
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.ad-gallery.js"></script>
