--- a/details-specialEvents.html
+++ b/details-specialEvents.html
@@ -43,6 +43,7 @@
 				<span class="clear"></span>
 			</ul>
 			<div class="deets-container-1">
+				<div class="background"></div>
 				<ul>
 					<li style="margin-bottom: 5px;"><b>Events we've done: &nbsp; (Besides Weddings!)</b></li>
 					<li>Bridal Showers</li>
@@ -58,6 +59,7 @@
 				</ul>
 			</div>
 			<div class="deets-container-2">
+				<div class="background"></div>
 				<ul>
 					<li style="font-size: 18px; text-transform: none;"><b>Imagine...</b></li>
 					<li>* A place that meets all budget needs whether big or small</li>
@@ -81,6 +83,8 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
+	<div id="rpt-red-ribbon-left" class="frame"></div>
+	<div id="rpt-red-ribbon-right" class="frame"></div>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
