--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
-	<div id="rpt-rose-left"></div>
-	<div id="rpt-rose-right"></div>
+	<div id="rpt-rose-left" class="frame"></div>
+	<div id="rpt-rose-right" class="frame"></div>
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
